--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -1,10 +1,12 @@
 .contact {
   height: 100%;
-  padding-top: 40vh;
+
   overflow: hidden;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+  flex-basis: 33%;
   background: linear-gradient(
       to right,
       rgba($primary-color, 0.9),
