--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -50,5 +50,6 @@
   }
   .contact_list {
     grid-template-columns: repeat(3, 1fr);
+    place-items: center;
   }
 }
